<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">影吧</string>
    <string name="home_title_name">影吧</string>
    <string name="text_local_play">本地播放</string>
    <string name="text_movie_folder">影库列表</string>
    <string name="settings_text_language">默认字幕语言</string>
    <string name="settings_support_local_browser">支持本地浏览</string>
    <string name="settings_secret_manage">密码设置</string>
    <string name="settings_movie_foler_manage">影库管理</string>
    <string name="settings_movie_foler_add">影库添加</string>
    <string name="settings_movie_foler_create">影库制作</string>
    <string name="settings_movie_foler_delete">影库刪除</string>
    <string name="settings_movie_foler_save">影库添加</string>
    <string name="settings_movie_foler_edite">影库编辑</string>
    <string name="settings_movie_foler_path">影库路径</string>
    <string name="settings_movie_foler_name">影库名称</string>
    <string name="settings_movie_download_share">影库下载和共享</string>
    <string name="settings_movie_path">影库目录</string>
    <string name="user_name">账号:</string>
    <string name="user_pass">密码:</string>
    <string name="quit_app">退出应用</string>
    <string name="quit_app_confirm">确定退出影吧应用吗？</string>
    <string name="settings_movie_item_edite">编辑</string>
    <string name="settings_movie_item_delete">删除</string>
    <string name="settings_folder_delted_info">提示：只刪除影库列表，在影吧应用中将不能找到影片，删除后可以重新添加。</string>
    <string name="add">添加</string>
    <string name="movie_folder_add_success">%1$s添加成功</string>
    <string name="movie_folder_add_success_num">%1$s添加成功, 共增加%2$s部影片</string>
    <string name="movie_folder_add_delete">%1$s删除成功</string>
    <string name="movie_folder_add_update">%1$s更新成功</string>
    <string name="movie_folder_has_add_msg">该影库目录已经添加，继续添加将会覆盖之前的影库，如需覆盖请点击确定</string>
    <string name="lan_tab_title">网络共享</string>
    <string name="ftp_tab_title">FTP</string>
    <string name="nfs_tab_title">NFS</string>
    <string name="network_error_exitnetbrowse">网络连接失败，退出网络文件浏览，切换到本地文件浏览</string>
    <string name="login_server_error">登录服务器失败</string>
    <string name="delete_v">删除成功</string>
    <string name="delete_none">未选中任何条目</string>
    <string name="add_shortcut">加入快捷菜单</string>
    <string name="str_Ex">例如:</string>
    <string name="str_name">账号:</string>
    <string name="str_pass">密码:</string>
    <string name="str_service">服务器:</string>
    <string name="str_anonymous">匿名:</string>
    <string name="dispaly">服务器名:</string>
    <string name="server1">服务器</string>
    <string name="user_name1">账号</string>
    <string name="user_pass1">密码</string>
    <string name="work_path">共享目录</string>
    <string name="folder_position">共享目录:</string>
    <string name="servers">服务器:</string>
    <string name="pos_delete_failed">%1$s删除失败</string>
    <string name="input_name_pass">账号/密码不能为空</string>
    <string name="no_movie">未找到资源</string>
    <string name="no_movie_info">未找到影片信息</string>
    <string name="unknown">暂无</string>
    <string name="text_tips">提示 </string>
    <string name="text_loading">加载中&#8230; </string>
    <string name="text_director">导演：</string>
    <string name="text_performer">主演：</string>
    <string name="text_type">类型：</string>
    <string name="text_area">地区：</string>
    <string name="text_duration">时长：</string>
    <string name="text_synopsis">剧情：</string>
    <string name="text_all">全部</string>
    <string name="text_play">默认播放</string>
    <string name="text_play2">XBMC播放</string>
    <string name="text_search">影片搜索</string>
    <string name="text_back">返回</string>
    <string name="text_input">请输入关键字</string>
    <string name="no_activity_info">找不到该应用</string>
    <string name="file_name">文件名称</string>
    <string name="update_time">修改时间</string>
    <string name="file_size">文件大小</string>
    <string name="dir">文件夹</string>
    <string name="close">关闭</string>
    <string name="file_info_name">文件名：</string>
    <string name="file_info_size">文件大小：</string>
    <string name="file_info_modify_time">修改日期：</string>
    <string name="file_info_create_time">创建日期：</string>
    <string name="file_info_type">文件类型：</string>
    <string name="file_info">详细信息</string>
    <string name="all_network">点击选择目录</string>
    
   
    <string name="work_path_null">共享目录不能为空</string>
   <string name="shortcut_exist">快捷方式已存在</string>
    
    <string name="input_server">服务器地址不能为空</string>
    <string name="adding_server">新建服务器中</string>
    <string name="please_waitting">请等待......</string>
    
    <string name="no_search_file">未找到匹配的文件</string>
    <string name="server_name">服务器名</string>
    <string name="dir_name">目录</string>
    <string name="wait_str">请等待</string>
    <string name="search_str">服务器搜索中......</string>
    <string name="paste_str">文件粘贴中......</string>
    <string name="invalid_str">非法的挂载位置</string>
    <string name="server_ip_fmt_err">服务器IP内容格式不正确</string>
    <string name="new_mout_fail">挂载失败</string>
    <string name="net_time_out">搜索超时</string>
    <string name="new_server_error">挂载服务器失败</string>
    <string name="no_server">没有服务器</string>
    <string name="network_error">网络错误，请检查网络状态</string>
    <string name="hold_type">目前已支持的%1$s格式：%2$s</string>
    <string name="is_add_short">是否添加该目录为快捷方式</string>
    <string name="file_is_searching">文件搜索中......</string>
    <string name="install_equi">设备加载成功</string>
    <string name="uninstall_equi">设备卸载成功</string>
    <string name="quary_error">查询出错</string>
    <string name="mount_self">不能挂载设备本身</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="user_or_pass">账号/密码不正确</string>
    <string name="new_mout_successfully">挂载成功</string>
    <string name="file_cannot_read">无法读取内容</string>
    <string name="error_folder">获取共享目录失败</string>
    <string name="cause_anr">立即点击返回可能引起界面卡死，请稍候点击返回</string>
    <string name="del_server_dlg_title">删除对话框</string>
    <string name="comfirm_delete_hint">确实要进行删除吗？</string>
    <string name="add_short_succ">添加快捷方式成功</string>
    <string name="nodesc">没有说明</string>
    <string name="notice">注意</string>
    <string name="music">音频</string>
    <string name="video">视频</string>
    <string name="image">图片</string>
    <string name="operation">操作</string>
    <string name="cut">剪切</string>
    <string name="paste">粘贴</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="str_rename">重命名</string>
    <string name="str_new">新建</string>
    <string name="search">搜索</string>
    <string name="preview">预览</string>
    <string name="eject_cdrom">弹出光驱</string>
    <string name="select_file">请选择文件</string>
    <string name="new_dir">新建文件夹</string>
    <string name="Rename_null">文件名/文件夹名不能为空</string>
    <string name="your_file">指定文件/文件夹%1$s与现有文件/文件夹重名</string>
    <string name="ok_add">确定创建%1$s%2$s吗?</string>
    <string name="file">文件</string>
    <string name="builded">已创建</string>
    <string name="error">新建%1$s%2$s出错</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="override_file">%1$s已存在，确实要覆盖吗?</string>
    <string name="paste_error">粘贴失败</string>
    <string name="paste_v">粘贴成功</string>
    <string name="sub_dir">目标文件夹是源文件夹的子文件夹</string>
    <string name="ok_delete">确定要删除%1$s吗?</string>
    <string name="delete_error">删除失败</string>
    <string name="name_no_update">名称未修改</string>
    <string name="ok_update">确定修改%1$s%2$s名称为%3$s吗?</string>
    <string name="update_name_ok">修改文件名成功</string>
    <string name="update_name_error">修改文件名出错</string>
    <string name="add_ok">添加成功</string>
    <string name="select_type">请选择条件</string>
    <string name="help_title">使用帮助手册</string>
    <string name="suffix">请输入后缀名</string>
    <string name="str_server">新建</string>
    <string name="ip_address1">服务器IP</string>
    <string name="server_folder1">服务器文件夹</string>
    <string name="name_long">文件名不能超过128个字符</string>
    <string name="name_falid">文件名不能包含以下任何字符:/\\:*?\&quot;&lt;&gt;|</string>
    <string name="suffix_long">过滤条件不能超过10个字符</string>
    <string name="suffix_falid">过滤条件不能包含以下任何字符:/\\:*?\&quot;&lt;&gt;|</string>
    <!-- debug -->
    <string name="sdcard_no_capacity">存储空间不足</string>
    <string name="suffix_exist">过滤类型已存在</string>
    <string name="has_exist">%1$s已存在</string>
    <string name="edit">编辑</string>
    <string name="type_undelete">%1$s是默认过滤类型,不能删除</string>
    <!-- tab title -->
    <string name="local_tab_title">存储设备</string>
    <string name="suffix_no">过滤类型为空</string>
    <string name="name_empty">文件名不能为空</string>
    <string name="running_background">任务在后台运行</string>
    <string name="network_error_notbrowse">网络连接失败，不能浏览网络文件</string>
    <string name="no_cdrom">没有接入光驱或光盘被拔出，请检查</string>
    <string name="no_file_support">文件类型不支持</string>
    <string name="filter_but">切换过滤条件</string>
    <string name="sort_but">文件排序</string>
    <string name="show_but">切换显示方式</string>
    <string name="upnp_tab_title">UPnP</string>
    <string name="baidu_pcs">百度网盘</string>
    <string name="file_size_1">文件大小 : </string>
    <string name="file_type">文件类型 : </string>
    <string name="last_modified">最后修改时间 : </string>
    <string name="title_activity_main_explorer">MainExplorerActivity</string>
    <string name="add_titel">添加片库路径</string>
    <string name="tips">提示：选择电影文件夹,</string>
    <string name="opration1">按“OK”键进入,按“右键</string>
     <string name="opration2">”键加入片库,按“菜单</string>
      <string name="opration3">”键编辑</string>
    <string name="menu_titel">將此路径加入片库?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_explorer_select">ExplorerSelectActivity</string>
    <string name="exit_tip">再按一次退出选择</string>
    <string name="add_repeat">不可添加重复路径</string>
    <string name="add_parent">已添加过上层路径</string>
    <string name="add_chlid">已添加过子路径，要覆盖吗?</string>
    
     <string name="manager_titel">影片库</string>
     <string name="del_titel">提示：按“菜单</string>
     <string name="del_titel2">”键删除库路径</string>
     <string name="buttom_titel">以上位置的视频会出现在片库中</string>
     <string name="del_finish">完成</string>
     <string name="del_options">确定删除该路径片库？</string>
       <string name="del_confirm">删除</string>
        <string name="del_cancel">取消</string>
        <string name="empty_toast">您还未添加过片库</string>
        
         <string name="net_confirm">确定</string>
         <string name="net_cancel">取消</string>
         <string name="no_network_toast">网络未连接,将无法获取网络电影信息,要继续添加吗？</string>
         <string name="setting">设置</string>
	<string name="local_select">本地选择</string>
         
    
    <string name="title_activity_path_manager">PathManagerActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>