<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dip"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/servers"
            android:textSize="20px" />

        <EditText
            android:id="@+id/editServer"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:hint="@string/server1"
            android:inputType="phone"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/folder_position"
            android:textSize="20px" />

        <EditText
            android:id="@+id/position"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:hint="@string/work_path"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textName"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/str_name"
            android:textSize="20px" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:hint="@string/user_name1"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textpass"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/str_pass"
            android:textSize="20px" />

        <EditText
            android:id="@+id/editpass"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:hint="@string/user_pass1"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/dispaly"
            android:textSize="20px" />

        <EditText
            android:id="@+id/editdisplay"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/server_name"
            android:maxLength="50"
            android:singleLine="true" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/add_shortcut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dip"
        android:checked="true"
        android:nextFocusDown="@+id/myOkBut"
        android:text="@string/add_shortcut" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/myOkBut"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/myCancelBut"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>