<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="250dp"
    android:layout_height="246dp"
    android:background="@drawable/beijing"
   >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/no_network_toast"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:focusable="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="180dp"
       
        android:gravity="center_horizontal">
        
          <TextView 
       
        android:layout_width="100dp"
        android:layout_height="48dp"
       android:textColor="@color/white"
          android:text="@string/cancel"
        android:id="@+id/tv_cancel"   
        android:textSize="20sp"
        android:gravity="center"
        android:focusable="true"
        android:layout_marginLeft="36dp"
        android:background="@drawable/button_selector"/>
    
    <TextView 
        
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:focusable="true"
        android:layout_marginLeft="65dp"
        android:text="@string/ok"
         android:id="@+id/tv_sure"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/button_selector"
        android:textSize="25sp"/>
        
    </LinearLayout>
   
  
</RelativeLayout>
