<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/drawable_bg"
    tools:context="com.hisilicon.videocenter.auto.ExplorerSelectActivity" >
<LinearLayout 
    android:id="@+id/rl1"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_titel" 
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips" 
        android:layout_marginLeft="100dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"/>
   
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opration1" 
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opration2" 
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/youjian"/>
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opration3" 
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/caidanjian"/>
</LinearLayout>
<View 
    android:id="@+id/view1"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#7b7f85"
    android:layout_below="@+id/rl1"/>
    <ListView 
    android:id="@+id/file_listview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/view1"
    android:layout_above="@+id/rl2"
    android:listSelector="#2b344b"
    android:divider="#7b7f85"
    android:layout_marginBottom="50dp"
    ></ListView>
    <View 
        android:id="@+id/view2"
    android:layout_width="match_parent"
    android:layout_height="3dp"
    android:background="@color/white"
    android:layout_above="@+id/rl2"
    android:visibility="gone"/>
    <RelativeLayout 
        android:id="@+id/rl2"
    android:layout_width="match_parent"
    android:layout_height="80dp" 
    android:layout_alignParentBottom="true">
       <ImageView 
           android:id="@+id/iv_folder"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/folder_current"
           android:layout_gravity="center_vertical"/>
         <TextView
        android:id="@+id/tv_current_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
      	android:layout_toRightOf="@+id/iv_folder"
        android:background="@drawable/current_path_bg"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/tv_dir_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        />
   
    </RelativeLayout>
    
    <ProgressBar 
        android:id="@+id/pb"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
       	android:layout_centerInParent="true"/>

</RelativeLayout>
