<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60px"
        android:layout_marginTop="41px"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/home_back_iv"
            android:layout_width="39px"
            android:layout_height="39px"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19px"
            android:text="@string/home_title_name"
            android:textColor="#008aff"
            android:textSize="35px"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="91px"
        android:layout_marginTop="34px"
        android:layout_weight="1.5"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="273px"
            android:layout_height="354px"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginLeft="35px" 
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textDirector"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textPerformer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/textType"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textArea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textDuration"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="167px"
                android:layout_height="wrap_content"
                android:textSize="30px"
                android:gravity="center"
                android:background="@drawable/button_movie_play_selector"
                android:text="@string/text_play"
                android:textColor="@color/white" />
            
         <GridView
            android:id="@+id/gridview_episode"
            android:layout_width="match_parent"
            android:layout_height="45px"
            android:listSelector="@drawable/episode_item_selector"
            android:numColumns="15"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical"
            android:horizontalSpacing="6px"
            android:verticalSpacing="12px" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="91px"
        android:layout_marginRight="91px"
        android:layout_marginBottom="20px"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5" />
    </ScrollView>

</LinearLayout>